# data-nadhi-temporal-worker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test-workflow.json
.devcontainer/: Dockerfile  devcontainer.json
scripts/: run-worker.sh
temporal_worker/activities/: initial.py  transformations.py
temporal_worker/utils/: general.py  rule_engine.py
temporal_worker/utils/dal/: pipeline.py
temporal_worker/utils/db/: mongo.py  redis.py
temporal_worker/utils/transformations/: __init__.py  core.py  json.py
temporal_worker/workflows/: __init__.py  main_workflow.py  transformation.py
temporal_workers/destination_worker/: activities.py  dal.py  utils.py  workflow.py
temporal_workers/destination_worker/destinations/: __init__.py  core.py  slack.py
temporal_workers/main_worker/: activities.py  dal.py  workflow.py
temporal_workers/transformation_worker/: activities.py  rule_engine.py  utils.py  workflow.py
temporal_workers/transformation_worker/transformations/: json.py
utils/: exceptions.py  failure_logger.py  logger.py  minio_service.py  retry_policies.py  workflow_utils.py
utils/db/: mongo.py  redis.py
